--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-handlebars-paginate": "^1.0.3",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.5"
+    "sequelize": "^6.37.5",
+    "sequelize-cli": "^6.6.2"
   }
 }
